[package]
name = "httprs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

walkdir = "2"
clap = { version = "^4", features = ["derive", "wrap_help"] }
colored = "^2"
toml = "0.8"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.5"
urlencoding = "2"
tokio-util = "0.7.10"
futures-util = "0.3.30"
regex = "1"

[[bin]]
name = "httprs"
path = "src/main.rs"
