[package]
name = "httprs"
description = "A fast simple command line http server tool"
version = "0.2.1"
edition = "2021"
authors = ["10fish <jokefish@live.com>"]
license-file = "LICENSE"
repository = "https://github.com/10fish/httprs"
rust-version = "1.56"
documentation = "https://docs.rs/httprs"
readme = "README.md"
keywords = ["http", "server", "static"]
include = ["/src", "Cargo.toml", "COPYRIGHT", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.36", features = ["full"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

walkdir = "2"
clap = { version = "^4", features = ["derive", "wrap_help"] }
colored = "^2"
toml = "0.8"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.5"
urlencoding = "2"
tokio-util = "0.7"
futures-util = "0.3"
regex = "^1.6"
serde = { version = "1", features = ["derive"] }

[[bin]]
name = "httprs"
path = "src/bin/serve.rs"

[badges]
maintenance = { status = "experimental" }
